Disable tapping on EntryPreview.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/NewEntryPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/NewEntryPage.xaml
@@ -211,6 +211,7 @@
                                                Foreground="Gray" />
 
                                     <controls:Entry DataContext="{Binding Preview}"
+                                                    IsTapEnabled="False"
                                                     Margin="3,0,0,0"/>
                                 </StackPanel>
                             </ScrollViewer>
