Remove LeftSpacer in Entry control. It was a stupid idea anyway.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/FullEntry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/FullEntry.xaml
@@ -17,7 +17,7 @@
         <DataTemplate x:Key="Block_Entry">
             <controls:Entry DataContext="{Binding Comment}"
                             IsTapEnabled="False"
-                            ShowLeftSpacer="True"/>
+                            Margin="25,0,0,0"/>
         </DataTemplate>
 
         <DataTemplate x:Key="Block_Null" />
