--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/EntryPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/EntryPage.xaml
@@ -61,7 +61,7 @@
             <DataTemplate>
                 <controls:Entry DataContext="{Binding}"
                                 IsTapEnabled="False"
-                                ShowLeftSpacer="True"/>
+                                Margin="25,0,0,0"/>
             </DataTemplate>
         </ListView.ItemTemplate>
 
