--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Brushes.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Brushes.xaml
@@ -40,6 +40,8 @@
             <SolidColorBrush x:Key="SentMessageForeground" Color="#c0c0c0" />
             <SolidColorBrush x:Key="ReceivedMessageBackground" Color="#1B1B1B" />
             <SolidColorBrush x:Key="ReceivedMessageForeground" Color="#C0C0C0" />
+            <SolidColorBrush x:Key="MessageReceivedTimeForeground" Color="LightGray" />
+            <SolidColorBrush x:Key="MessageSentTimeForeground" Color="LightGray" />
 
             <SolidColorBrush x:Key="NoNotificationsForeground" Color="#717171" />
             <SolidColorBrush x:Key="NotificationsForeground" Color="White" />
@@ -108,6 +110,8 @@
             <SolidColorBrush x:Key="SentMessageForeground" Color="White" />
             <SolidColorBrush x:Key="ReceivedMessageBackground" Color="#EAEAEA" />
             <SolidColorBrush x:Key="ReceivedMessageForeground" Color="Black" />
+            <SolidColorBrush x:Key="MessageReceivedTimeForeground" Color="LightSteelBlue" />
+            <SolidColorBrush x:Key="MessageSentTimeForeground" Color="Gray" />
 
             <SolidColorBrush x:Key="NoNotificationsForeground" Color="#9E9E9E" />
             <SolidColorBrush x:Key="NotificationsForeground" Color="Black" />
