Fix light style in LennyChooser.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/LennyChooser.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/LennyChooser.xaml
@@ -13,10 +13,11 @@
         <Style TargetType="TextBlock" x:Key="LennyLabel">
             <Setter Property="FontSize" Value="26" />
             <Setter Property="FontFamily" Value="Segoe UI" />
+            <Setter Property="Foreground" Value="{ThemeResource ApplicationForegroundThemeBrush}" />
         </Style>
     </UserControl.Resources>
     
-    <Grid>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
