--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/AttachmentPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/AttachmentPage.xaml
@@ -12,8 +12,7 @@
     d:DesignWidth="400"
     DataContext="{Binding NewEntry.AttachmentTarget, Mode=OneWay, Source={StaticResource Locator}}">
 
-    <Grid x:Name="LayoutRoot"
-          Background="{StaticResource PivotHeaderBackground}">
+    <Grid x:Name="LayoutRoot">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
