Fix alignment of embed in conversationpage.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ConversationPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ConversationPage.xaml
@@ -63,6 +63,7 @@
                             <controls:EntryEmbed MaxHeight="300"
                                                  MaxWidth="300"
                                                  Margin="5,0,5,5"
+                                                 HorizontalAlignment="Left"
                                                  DataContext="{Binding EmbedVM}"/>
                         </Grid>
                         
